scrollbar fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,7 +25,7 @@ body {
   &::-webkit-scrollbar-thumb:horizontal {
     width: 10px;
     border-radius: 5px;
-    background: rgba(17, 27, 39, 0.85);
+    background: rgba(17, 27, 39, 1);
   }
 
   #__next {
